load("//:bazel/workspace/workspace_init.bzl", "init_workspace")

init_workspace()

load(
    "//:bazel/workspace/workspace_configure.bzl",
)


local_repository(
    name = "forgerock_am_rules",
    path = "bazel/forgerock_am_rules",
)

maven_install(
        name = "maven",
        artifacts = commons_bom.resolve([
            "ch.qos.logback.contrib:logback-jackson:0.1.5",
            "ch.qos.logback.contrib:logback-json-classic:0.1.5",
            "ch.qos.logback:logback-classic:1.2.9",
            "ch.qos.logback:logback-core:1.2.9",
            "co.nstant.in:cbor:0.8",
            "com.amazonaws:aws-java-sdk-core:1.12.75",
            maven.artifact(
                artifact = "aws-java-sdk-sns",
                exclusions = [
                    "org.apache.httpcomponents:httpclient",
                    "org.apache.httpcomponents:httpcore",
                ],
                group = "com.amazonaws",
                version = "1.12.75",
            ),
            "com.atlassian.commonmark:commonmark:0.6.0",
            "com.beust:jcommander:1.81",
            "com.fasterxml.jackson.core:jackson-annotations",
            "com.fasterxml.jackson.core:jackson-core",
            "com.fasterxml.jackson.core:jackson-databind",
            "com.fasterxml.jackson.dataformat:jackson-dataformat-cbor",
            "com.fasterxml.jackson.module:jackson-module-jsonSchema",
            "com.fasterxml.woodstox:woodstox-core:6.5.0",
            "com.github.zafarkhaja:java-semver:0.9.0",
            "com.google.api.grpc:proto-google-cloud-kms-v1",
            "com.google.api:api-common",
            "com.google.api:gax",
            "com.google.auto.service:auto-service-annotations:1.0.1",
            "com.google.auto.service:auto-service:1.0.1",
            "com.google.auth:google-auth-library-credentials",
            "com.google.auth:google-auth-library-oauth2-http",
            "com.google.cloud:google-cloud-kms",
            "com.google.code.findbugs:jsr305:3.0.0",
            "com.google.code.gson:gson:2.10",
            "com.google.guava:failureaccess:1.0.1",
            "com.google.guava:guava",
            "com.google.http-client:google-http-client",
            "com.google.http-client:google-http-client-gson",
            "com.google.inject.extensions:guice-assistedinject",
            "com.google.inject.extensions:guice-multibindings",
            maven.artifact(
                artifact = "guice",
                classifier = "no_aop",
                group = "com.google.inject",
                version = GUICE_VERSION,
            ),
            "com.google.jimfs:jimfs:1.2",
            "com.google.protobuf:protobuf-java",
            "com.googlecode.java-ipv6:java-ipv6:0.14",
            maven.artifact(
                "com.h2database",
                "h2",
                "1.4.188",
                testonly = True,
            ),
            "com.jcraft:jsch:0.1.54",
            maven.artifact(
                artifact = "geoip2",
                exclusions = [
                    "org.apache.httpcomponents:httpcore",
                    "org.apache.httpcomponents:httpclient",
                ],
                group = "com.maxmind.geoip2",
                version = "2.16.1",
            ),
            "com.sun.codemodel:codemodel:2.6",
            "com.sun.mail:javax.mail",
            "com.sun.xml.bind:jaxb-core:2.3.0.1",
            "com.sun.xml.bind:jaxb-impl:2.3.1",
            "com.sun.xml.bind:jaxb-xjc:2.3.1",
            "com.sun.xml.messaging.saaj:saaj-impl:1.3.19",
            "com.sun.xml.rpc:jaxrpc-spi:1.1.3_01",
            maven.artifact(
                artifact = "jaxws-rt",
                exclusions = ["org.codehaus.woodstox:woodstox-core-asl"],
                group = "com.sun.xml.ws",
                version = "2.3.0",
            ),
            "com.zaxxer:HikariCP",
            "commons-codec:commons-codec:1.14",
            "commons-collections:commons-collections:3.2.2",
            "commons-fileupload:commons-fileupload:1.5",
            "commons-io:commons-io:2.8.0",
            "commons-lang:commons-lang:2.6",
            "commons-logging:commons-logging-api:1.1",
            "commons-logging:commons-logging:1.1.3",
            "de.danielbechler:java-object-diff:0.95",
            maven.artifact(
                artifact = "authapi",
                group = "external",
                neverlink = "True",
                version = "2005-08-12",
            ),
            "external:jaxrpc-impl:1.1.3_01-20160905",
            maven.artifact(
                artifact = "jdmkrt",
                group = "external",
                neverlink = "True",
                version = "1.0-b2",
            ),
            "external:jdmktk:1.0-b2",
            "httpunit:httpunit:1.7",
            "io.dropwizard.metrics:metrics-core",
            "io.dropwizard.metrics:metrics-graphite",
            "io.dropwizard.metrics:metrics-json",
            "io.grpc:grpc-alts",
            "io.prometheus:simpleclient:0.0.21",
            "io.prometheus:simpleclient_common",
            "io.reactivex.rxjava3:rxjava",
            "io.swagger:swagger-models",
            "io.vavr:vavr:0.9.2",
            "javassist:javassist:3.12.1.GA",
            "javax.activation:activation:1.1",
            "javax.jms:javax.jms-api",
            maven.artifact(
                artifact = "javax.servlet-api",
                group = "javax.servlet",
                neverlink = "True",
                version = SERVLET_API_VERSION,  #TODO why is this here? Should be resolved by commons bom...
            ),
            "javax.validation:validation-api:1.1.0.Final",
            maven.artifact(
                artifact = "javax.websocket-api",
                group = "javax.websocket",
                neverlink = "True",
                version = JAVAX_WEBSOCKET_API_VERSION,
            ),
            "javax.xml.bind:jaxb-api:2.3.1",
            "javax.xml.soap:javax.xml.soap-api:1.4.0",
            "javax.xml.soap:saaj-api:1.3.4",
            "javax.xml:jaxrpc-api:1.1",
            "joda-time:joda-time",
            "jline:jline:2.14.6",
            "junit:junit:4.13.1",
            "net.agkn:hll",
            "net.bytebuddy:byte-buddy:1.12.10",
            "net.sf.supercsv:super-csv",
            "ognl:ognl:3.2.10",
            maven.artifact(
                group = "org.apache.activemq",
                artifact = "activemq-client",
                version = "5.13.3",
                testonly = True,
            ),
            "org.apache.click:click-extras:2.3.0",
            "org.apache.click:click-nodeps:2.3.0",
            "org.apache.commons:commons-lang3:3.10",
            "org.apache.neethi:neethi:3.2.0",
            maven.artifact(
                artifact = "cxf-rt-frontend-jaxws",
                exclusions = [
                    "org.apache.geronimo.genesis:genesis-java5-flava",
                ],
                group = "org.apache.cxf",
                version = "3.5.5",
            ),
            "org.apache.cxf:cxf-rt-bindings-soap:3.5.5",
            "org.apache.cxf:cxf-rt-ws-policy:3.5.5",
            #           <!-- Explicit dependency added to avoid dependency convergence issue
            #                Should be possible to remove this when cxf pulls in org.ehcache:3.9.7 or later -->
            "org.ehcache:ehcache:3.9.7",
            maven.artifact(
                artifact = "cxf-rt-ws-security",
                exclusions = [
                    "org.ehcache:ehcache",
                ],
                group = "org.apache.cxf",
                version = "3.5.5",
            ),
            maven.artifact(
                artifact = "cxf-services-sts-core",
                exclusions = [
                    "org.springframework:spring-context",
                ],
                group = "org.apache.cxf.services.sts",
                version = "3.5.5",
            ),
            "org.apache.wss4j:wss4j-policy:2.4.0",
            "org.checkerframework:checker-qual:3.19.0",
            "org.cryptacular:cryptacular:1.1.4",
            "jakarta.xml.ws:jakarta.xml.ws-api:2.3.3",
            "org.opensaml:opensaml-soap-api:3.4.6",
            "org.apache.wss4j:wss4j-ws-security-dom:2.4.0",
            "org.apache.wss4j:wss4j-ws-security-common:2.4.0",
            "org.apache.cxf:cxf-core:3.5.5",
            "org.apache.cxf:cxf-rt-transports-http:3.5.5",
            "org.jetbrains:annotations:19.0.0",
            "org.apache.commons:commons-collections4:4.4",
            "org.apache.httpcomponents:httpasyncclient-osgi",
            "org.apache.httpcomponents:httpclient-osgi",
            "org.apache.httpcomponents:httpcore-osgi",
            maven.artifact(
                artifact = "xmlsec",
                exclusions = ["org.glassfish.jaxb:jaxb-runtime", "com.fasterxml.woodstox:woodstox-core"],
                group = "org.apache.santuario",
                version = "2.3.0",
            ),
            "org.apache.servicemix.bundles:org.apache.servicemix.bundles.javax-inject",
            maven.artifact(
                artifact = "asciidoctorj",
                group = "org.asciidoctor",
                version = "2.5.3",
            ),
            "org.asciidoctor:asciidoctorj-api:2.5.3",
            "org.assertj:assertj-core",
            "org.bouncycastle:bcpkix-jdk15on",
            "org.bouncycastle:bcprov-jdk15on",
            "org.codehaus.groovy:groovy:3.0.10",
            "org.codehaus.groovy:groovy-console:3.0.10",
            "org.codehaus.groovy:groovy-groovysh:3.0.10",
            "org.codehaus.groovy:groovy-json:3.0.10",
            "org.codehaus.groovy:groovy-jsr223:3.0.10",
            "org.codehaus.groovy:groovy-macro:3.0.10",
            "org.codehaus.groovy:groovy-nio:3.0.10",
            "org.codehaus.groovy:groovy-sql:3.0.10",
            "org.codehaus.groovy:groovy-swing:3.0.10",
            "org.codehaus.groovy:groovy-templates:3.0.10",
            "org.codehaus.groovy:groovy-test:3.0.10",
            "org.codehaus.groovy:groovy-xml:3.0.10",
            "org.codehaus.woodstox:stax2-api:4.2",
            "org.forgerock.commons:api-descriptor",
            "org.forgerock.commons:authz-framework-api",
            "org.forgerock.commons:authz-framework",
            "org.forgerock.commons:config",
            "org.forgerock.commons:forgerock-audit-core",
            "org.forgerock.commons:forgerock-audit-handler-csv",
            "org.forgerock.commons:forgerock-audit-handler-elasticsearch",
            "org.forgerock.commons:forgerock-audit-handler-jdbc",
            "org.forgerock.commons:forgerock-audit-handler-jms",
            "org.forgerock.commons:forgerock-audit-handler-json-stdout",
            "org.forgerock.commons:forgerock-audit-handler-json",
            "org.forgerock.commons:forgerock-audit-handler-splunk",
            "org.forgerock.commons:forgerock-audit-handler-syslog",
            "org.forgerock.commons:forgerock-audit-json",
            "org.forgerock.commons:forgerock-jaspi-jwt-session-module",
            "org.forgerock.commons:forgerock-jaspi-openid-connect-module",
            "org.forgerock.commons:forgerock-jaspi-runtime",
            "org.forgerock.commons:forgerock-macaroons",
            "org.forgerock.commons:forgerock-oauth-core",
            "org.forgerock.commons:forgerock-openid-resolver",
            "org.forgerock.commons:forgerock-selfservice-core",
            "org.forgerock.commons:forgerock-selfservice-stages",
            "org.forgerock.commons:forgerock-test-utils",
            "org.forgerock.commons:forgerock-testng:" + COMMONS_VERSION,
            "org.forgerock.commons:forgerock-util",
            "org.forgerock.commons:i18n-core",
            "org.forgerock.commons:i18n-slf4j:1.4.4",
            "org.forgerock.commons:json-resource-http",
            "org.forgerock.commons:json-resource",
            "org.forgerock.commons:json-schema-core",
            "org.forgerock.commons:json-web-token",
            "org.forgerock.commons:monitoring-api",
            "org.forgerock.commons:monitoring-dropwizard",
            "org.forgerock.commons:monitoring-http",
            "org.forgerock.commons:monitoring-json-resource",
            "org.forgerock.commons:oauth-apple-client",
            "org.forgerock.commons:oauth-facebook-client",
            "org.forgerock.commons:oauth-instagram-client",
            "org.forgerock.commons:oauth-linkedin-client",
            "org.forgerock.commons:oauth-oauth2-client",
            "org.forgerock.commons:oauth-oidc-client",
            "org.forgerock.commons:oauth-twitter-client",
            "org.forgerock.commons:oauth-vk-client",
            "org.forgerock.commons:oauth-wechat-client",
            "org.forgerock.commons:secrets-api",
            "org.forgerock.commons:secrets-backend-gcp-secretsmanager",
            "org.forgerock.commons:secrets-backend-gcpkms",
            "org.forgerock.commons:secrets-backend-hashicorp-vault",
            "org.forgerock.commons:secrets-backend-jwkset",
            "org.forgerock.commons:secrets-backend-keystore",
            "org.forgerock.commons:secrets-backend-oauth2",
            "org.forgerock.commons:secrets-backend-propertyresolver",
            "org.forgerock.commons:security",
            "org.forgerock.cuppa:cuppa-junit:1.6.0",
            "org.forgerock.cuppa:cuppa:1.6.0",
            "org.forgerock.http:chf-client-apache-async",
            "org.forgerock.http:chf-http-core",
            "org.forgerock.http:chf-http-servlet",
            "org.forgerock.http:chf-oauth2",
            "org.forgerock.opendj:opendj-cli:" + DS_VERSION,
            "org.forgerock.opendj:opendj-config:" + DS_VERSION,
            "org.forgerock.opendj:opendj-core:" + DS_VERSION,
            maven.artifact(
                artifact = "opendj-server",
                exclusions = [
                    "org.slf4j:slf4j-jdk14",
                    "org.forgerock.opendj:opendj-ldap-toolkit",
                    "com.google.inject:guice",
                    "org.apache.servicemix.bundles:org.apache.servicemix.bundles.java-xmlbuilder",
                ],
                group = "org.forgerock.opendj",
                version = DS_VERSION,
            ),
            "org.freemarker:freemarker:2.3.31",
            "org.glassfish.external:management-api:3.2.1-b001",  #Pinning to match Maven
            "org.glassfish.jaxb:jaxb-runtime:2.3.1",
            "org.glassfish:javax.security.auth.message",
            "com.google.errorprone:error_prone_annotations:2.3.4",
            "org.hamcrest:hamcrest-core:1.3",
            "org.hdrhistogram:HdrHistogram",
            "org.jgrapht:jgrapht-core:0.9.1",
            "org.json:json:20230227",
            "org.jsonschema2pojo:jsonschema2pojo-cli:1.0.0",
            "org.jsonschema2pojo:jsonschema2pojo-core:1.0.0",
            "org.jvnet.mimepull:mimepull:1.7",
            "org.kohsuke:groovy-sandbox:1.27",
            "org.mockito:mockito-core:3.12.4",
            "org.mockito:mockito-inline:4.3.1",
            "org.mockito:mockito-testng",
            "org.mortbay.jetty:jetty-servlet-tester:7.0.0.pre5",
            maven.artifact(
                artifact = "esapi",
                exclusions = [
                    "log4j:log4j",
                    "org.apache.xmlgraphics:batik-css"
                ],
                group = "org.owasp.esapi",
                version = "2.5.1.0",
            ),
            "org.powermock:powermock-api-mockito2:2.0.9",
            "org.powermock:powermock-core:2.0.2",
            "org.powermock:powermock-module-junit4:2.0.2",
            "org.powermock:powermock-module-testng-common:2.0.2",
            "org.powermock:powermock-module-testng:2.0.2",
            "org.powermock:powermock-reflect:2.0.2",
            "org.mozilla:rhino:1.7.14",
            "org.slf4j:slf4j-api",
            "org.slf4j:slf4j-nop",
            "org.slf4j:slf4j-simple",
            "org.testng:testng",
            "pl.pragmatists:JUnitParams:1.1.1",
            # Dependency for Migration tool.
            # We will remove this once we are happy with the migration.
            "io.github.java-diff-utils:java-diff-utils:4.5",
      ]),
      excluded_artifacts = [
          # This is a workaround as there is a bug in the deduplication of the coursier output
          "aopalliance:aopalliance",
          "javax.inject:javax.inject",
      ],
      fetch_sources = True,
      maven_install_json = "//:maven_install.json",
      repositories = [
          "https://repo1.maven.org/maven2",
          "https://maven.forgerock.org/artifactory/internal-releases",
          "https://maven.forgerock.org/artifactory/openam-dependencies",
          "https://repo.jenkins-ci.org/releases",
          "https://maven.forgerock.org/artifactory/forgerock-third-party-virtual",
      ],
      strict_visibility = True,
      version_conflict_policy = "pinned",
  )